[gd_scene load_steps=24 format=3 uid="uid://bacl7irhgnrr7"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_d3wq5"]
[ext_resource type="Texture2D" uid="uid://bdw2ln7jh2dda" path="res://sprites/Wormchelt.png" id="2_4q2ix"]
[ext_resource type="Script" path="res://scripts/line_trail.gd" id="2_ap5d5"]
[ext_resource type="Texture2D" uid="uid://bk2s75us1jsj8" path="res://sprites/air_trail.png" id="2_odrpe"]
[ext_resource type="AudioStream" uid="uid://84ge45s7w0d6" path="res://sounds/scream.mp3" id="3_p5reh"]
[ext_resource type="Texture2D" uid="uid://b2hpi4gi8412a" path="res://sprites/ball.png" id="4_74kgy"]
[ext_resource type="Texture2D" uid="uid://drekgwtmn12em" path="res://sprites/poisonbarbg.png" id="4_lc4xj"]
[ext_resource type="AudioStream" uid="uid://lqak5ne0y0ry" path="res://sounds/spike_death_horrible.mp3" id="4_qltkw"]
[ext_resource type="AudioStream" uid="uid://2dj8lww8invu" path="res://sounds/drowning.mp3" id="5_lw7l2"]
[ext_resource type="Texture2D" uid="uid://mcb1ibd4kpgc" path="res://sprites/poisonbarfill.png" id="5_qtas3"]
[ext_resource type="AudioStream" uid="uid://c7cqe1v7tc6px" path="res://sounds/acid_death.mp3" id="6_oqllm"]
[ext_resource type="AudioStream" uid="uid://c6lpykemf2ubq" path="res://sounds/sizzle.mp3" id="7_y18mt"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_asclu"]
friction = 0.1
rough = true

[sub_resource type="Curve" id="Curve_57xgx"]
_data = [Vector2(0.0960854, 0.235849), 0.0, 0.0, 0, 0, Vector2(1, 0.59434), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_cyxjh"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.33195, 1), 0.0, 0.0, 0, 0, Vector2(0.697095, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_2oyaa"]
curve = SubResource("Curve_cyxjh")

[sub_resource type="Curve" id="Curve_71nq6"]
_data = [Vector2(0, 0.197802), 0.0, 0.0, 0, 0, Vector2(0.165975, 1), 0.0, 0.0, 0, 0, Vector2(0.629032, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.340659), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_8gxqo"]
curve = SubResource("Curve_71nq6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qsc3v"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 180.0
initial_velocity_max = 180.0
gravity = Vector3(0, 98, 0)
scale_min = 0.08
scale_max = 0.08
scale_curve = SubResource("CurveTexture_8gxqo")
color = Color(1, 0.916667, 0, 1)
alpha_curve = SubResource("CurveTexture_2oyaa")

[sub_resource type="Curve" id="Curve_kk74s"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.11032, 0.179245), 0.0, 0.0, 0, 0, Vector2(1, 0.792453), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ibcn"]
size = Vector2(14, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kou4s"]
size = Vector2(18.09, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iawq7"]
size = Vector2(14, 30)

[node name="Worm" type="RigidBody2D"]
texture_filter = 5
collision_layer = 2
physics_material_override = SubResource("PhysicsMaterial_asclu")
continuous_cd = 2
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_d3wq5")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../DashCast/LineTrail2D")

[node name="Marker" type="Node2D" parent="."]
unique_name_in_owner = true
top_level = true
position = Vector2(122, 0)

[node name="Marker" type="Line2D" parent="Marker"]
position = Vector2(-15, -4.76837e-07)
rotation = 1.52031
scale = Vector2(0.829195, 0.829195)
points = PackedVector2Array(0.317071, -30.1722, 7.42207, -27.3981, 11, -23, 13, -17, 8.97892, -10.414, 2.77407, -7.10498, -4, -9, -8, -12, -9.98802, -17.4101, -8.47927, -23.3715, -4.62246, -28.0067)
closed = true
width = 2.42
default_color = Color(1, 0.8, 0, 0.619608)

[node name="Marker" type="Line2D" parent="Marker/Marker"]
show_behind_parent = true
position = Vector2(-17.1539, -18.9797)
rotation = 1.52018
scale = Vector2(0.982337, 0.982337)
points = PackedVector2Array(0.317071, -30.1722, 7.42207, -27.3981, 11, -23, 13, -17, 8.97892, -10.414, 2.77407, -7.10498, -4, -9, -8, -12, -9.98802, -17.4101, -8.47927, -23.3715, -4.62246, -28.0067)
closed = true
width = 7.065
default_color = Color(0, 0, 0, 0.882353)

[node name="CastTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../DashCast")
update_rotation = false

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 23)

[node name="DashCast" type="RayCast2D" parent="."]
top_level = true
target_position = Vector2(125, 0)

[node name="LineTrail2D" type="Line2D" parent="DashCast"]
unique_name_in_owner = true
visible = false
top_level = true
points = PackedVector2Array(0, 0, 0, 0)
width = 30.0
width_curve = SubResource("Curve_57xgx")
default_color = Color(1, 0.916667, 0, 0.333333)
texture = ExtResource("2_odrpe")
texture_mode = 2
antialiased = true

[node name="teleport1" type="GPUParticles2D" parent="DashCast"]
unique_name_in_owner = true
emitting = false
amount = 128
process_material = SubResource("ParticleProcessMaterial_qsc3v")
texture = ExtResource("4_74kgy")
lifetime = 0.2
one_shot = true
explosiveness = 1.0

[node name="teleport2" type="GPUParticles2D" parent="DashCast"]
unique_name_in_owner = true
emitting = false
amount = 128
process_material = SubResource("ParticleProcessMaterial_qsc3v")
texture = ExtResource("4_74kgy")
lifetime = 0.2
one_shot = true
explosiveness = 1.0

[node name="LineTrail2D" type="Line2D" parent="."]
position = Vector2(0, 5)
width = 33.895
width_curve = SubResource("Curve_kk74s")
default_color = Color(1, 1, 1, 0.0784314)
texture = ExtResource("2_odrpe")
texture_mode = 2
joint_mode = 1
end_cap_mode = 2
script = ExtResource("2_ap5d5")
active = false
max_points = 80

[node name="LiquidReg" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="LiquidReg"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_6ibcn")
debug_color = Color(0, 0.638792, 0.373799, 0.42)

[node name="RagddollCast" type="ShapeCast2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_kou4s")
target_position = Vector2(0, 15)

[node name="LiquidCast" type="ShapeCast2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_kou4s")
target_position = Vector2(0, 15)
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
z_index = 1
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_iawq7")

[node name="Polygon2D" type="Polygon2D" parent="."]
clip_children = 1
polygon = PackedVector2Array(-5, 17, -7, 9, -7, 3, -8, -2, -6, -4, -5, -10, 1, -10, 2, -9, 4, -10, 6, -6, 6, -4, 7, -2, 8, 3, 7, 8, 9, 18, -5, 18)

[node name="Sprite2D" type="Sprite2D" parent="Polygon2D"]
unique_name_in_owner = true
scale = Vector2(0.0284502, 0.0284502)
texture = ExtResource("2_4q2ix")

[node name="Polygon2D2" type="Polygon2D" parent="."]
position = Vector2(-1, -2)
color = Color(0.22, 0.17534, 0.0924, 1)
polygon = PackedVector2Array(-7, 17, -11, 19, -9, 22, 12, 22, 14, 19, 7, 15, 4, 17, -1, 18, -3, 16)

[node name="Line2D" type="Line2D" parent="."]
top_level = true
z_index = 1
points = PackedVector2Array(0, 0, 0, 0)
width = 3.0
default_color = Color(0.408329, 0.408329, 0.408329, 1)

[node name="scream" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_p5reh")
volume_db = -10.0
pitch_scale = 1.2

[node name="scream2" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_qltkw")
volume_db = -10.0

[node name="scream3" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_lw7l2")
volume_db = 15.0
pitch_scale = 1.2

[node name="scream4" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_oqllm")
volume_db = -5.0

[node name="sizzle" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_y18mt")
volume_db = 5.0
pitch_scale = 1.1

[node name="poison" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
z_index = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -51.0
offset_right = 256.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.15, 0.15)
pivot_offset = Vector2(256, 32)
step = 0.0
texture_under = ExtResource("4_lc4xj")
texture_progress = ExtResource("5_qtas3")
